# wrist.github.io

./: .CNAME.un~  .doit.db.db  .gitignore  .travis.yml  CNAME  archive.html  conf.py  generate_jupyterlite.sh  id_rsa.enc  index-1.html  index-2.html  index-3.html  index-4.html  index-5.html  index-6.html  index-7.html  index-8.html  index.html  ipynb_convert.py  pyproject.toml  robots.txt  rss.xml  sitemap.xml  sitemapindex.xml
.github/workflows/: build.yml
2018/: index.html
2019/: index.html
2020/: index.html
2021/: index.html
2022/: index.html
assets/css/: all-nocdn.css  all.css  (+1 more)
categories/: animation.xml  avahi-daemon.xml  boa.xml  click.xml  conda.xml  debian.xml  docker.xml  ganmafen-bu.xml  github-actions.xml  github.xml  hexdump.xml  index.html  invoke.xml  jupyterlab.xml  jupyterlite.xml  kaldi.xml  librosa.xml  macos.xml  mamba.xml  matplotlib.xml  micromamba.xml  nbmediasplit.xml  ndarray.xml  nikola.xml  numpy.xml  openfst.xml  osx.xml  poetry.xml  pybind11.xml  pycon.xml  pydata.xml  pyroomacoustics.xml  python.xml  que-lu-fen-bu.xml  samba.xml  scikit-learn.xml  scipy.xml  slicerjupyter.xml  softether.xml  streamlit.xml  (+11 more)
en/: archive.html  index-1.html  index-2.html  index-3.html  index-4.html  index-5.html  index-6.html  index-7.html  index-8.html  index.html  rss.xml
galleries/: index.html  rss.xml
jupyterlite/: jupyter-lite.json
pages/: about.md
posts/: 1.md  13.ipynb  16.ipynb  19.ipynb  2.md  22.ipynb  23.md  24.md  27.md  6.md  7.ipynb  8.md  file.mat
slide/: 15.slides.html  17.slides.html  22.slides.html  4.slides.html
(+290 files in other folders)
