[tool.poetry]
name = "hiromasa_info"
version = "0.1.0"
description = ""
authors = ["wrist <stoicheia1986@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
nikola = {extras = ["extras"], version = "^8.1.3"}
ghp-import2 = "^1.0.1"
webassets = "^2.0"
nbconvert = "^6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
